Fix CORS headers in JwtFilter and SecurityConfig